[project]
name = "mbta-challenge"
version = "0.1.0"
description = "Simple CLI app for learning info about the MBTA transit system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "pydantic>=2.10.6",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "types-requests>=2.32.0.20241016",
]
